# mina-rust

./: .dockerignore  .env.example  .gitignore  .prettierignore  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  codecov.yml  docker-compose.archive.devnet.compare.yml  docker-compose.archive.devnet.yml  docker-compose.block-producer.yml  docker-compose.local.producers.yml  docker-compose.yml  docker.md  flake.nix  map.md  package-lock.json  package.json  rust-toolchain.toml  status.md  taplo.toml  test.sh  tree.txt  validation_output.txt
cli/: Cargo.toml
cli/replay_dynamic_effects/: Cargo.toml
cli/replay_dynamic_effects/src/: lib.rs
cli/src/: exit_with_error.rs  main.rs
cli/src/commands/: misc.rs  mod.rs
cli/tests/: bootstrap.rs
core/: Cargo.toml  summary.md
core/src/: chain_id.rs  consensus.rs  constants.rs  conversions.rs  encrypted_key.rs  invariants.rs  lib.rs  log.rs  network.rs  number.rs
core/src/block/: block_with_hash.rs  genesis.rs  mod.rs  prevalidate.rs
core/src/snark/: snark.rs  snark_job_commitment.rs
ledger/: Cargo.toml  summary.md
ledger/benches/: database.rs
ledger/src/: base.rs  cache.rs  hash.rs  lib.rs  transaction_pool.rs  tree.rs  tree_version.rs
ledger/src/account/: account.rs  common.rs  conv.rs  legacy.rs
ledger/src/address/: raw.rs
ledger/src/database/: database.rs  database_impl.rs
ledger/src/dummy/: mod.rs
ledger/src/ffi/: database.rs  mask.rs  util.rs
ledger/src/generators/: user_command.rs  zkapp_command.rs  zkapp_command_builder.rs
ledger/src/mask/: mask.rs
ledger/src/port_ocaml/: hash.rs  hash_table.rs
ledger/src/poseidon/: fp.rs
ledger/src/proofs/: accumulator_check.rs  block.rs  caching.rs  circuit_blobs.rs  constants.rs  conv.rs  field.rs  group_map.rs  merge.rs  mod.rs  prover.rs  provers.rs  step.rs  summary.md  to_field_elements.rs  transaction.rs  transition_chain.rs  unfinalized.rs  urs_utils.rs  util.rs  verification.rs  verifiers.rs  wrap.rs  zkapp.rs
ledger/src/scan_state/: conv.rs  currency.rs  fee_excess.rs  parallel_scan.rs  pending_coinbase.rs  scan_state.rs  snark_work.rs  transaction_logic.rs
ledger/src/sparse_ledger/: mod.rs  sparse_ledger.rs  sparse_ledger_impl.rs
ledger/src/staged_ledger/: diff.rs  hash.rs  pre_diff_info.rs  resources.rs  staged_ledger.rs  validate_block.rs
ledger/src/util/: mod.rs
ledger/src/verifier/: mod.rs
ledger/src/zkapps/: intefaces.rs  non_snark.rs  snark.rs  zkapp_logic.rs
ledger/tests/: test_transaction_logic_first_pass.rs  test_transaction_logic_first_pass_coinbase.rs  transaction_logic_tests.rs
macros/: Cargo.toml
macros/src/: action_event.md  action_event.rs  serde_yojson_enum.md
mina-p2p-messages/: Cargo.toml
mina-p2p-messages/src/: b58.rs  bigint.rs  hash.rs  hash_input.rs  pseq.rs  rpc.rs  string.rs  utils.rs
mina-p2p-messages/src/v2/: generated.rs  hashing.rs  manual.rs
mina-p2p-messages/tests/: rpc-read.rs
node/: Cargo.toml  README.md  build.rs
node/account/: Cargo.toml
node/account/src/: lib.rs  public_key.rs  secret_key.rs
node/account/tests/: test_secret_key.rs
node/common/: Cargo.toml  README.md
node/common/src/: lib.rs  tracing.rs
node/invariants/: Cargo.toml  README.md
node/native/: Cargo.toml  README.md
node/native/src/: http_server.rs  lib.rs  replay.rs
node/src/: account.rs  action.rs  action_kind.rs  config.rs  effects.rs  lib.rs  reducer.rs  service.rs  state.rs  summary.md
node/src/block_producer/: block_producer_actions.rs  block_producer_reducer.rs  block_producer_state.rs  mod.rs  summary.md
node/src/block_producer_effectful/: block_producer_effectful_actions.rs  block_producer_effectful_effects.rs  block_producer_effectful_service.rs
node/src/daemon_json/: json_genesis.rs  json_ledger.rs  mod.rs
node/src/error_sink/: error_sink_service.rs
node/src/event_source/: event.rs  event_source_effects.rs  summary.md
node/src/external_snark_worker/: external_snark_worker_actions.rs  external_snark_worker_reducer.rs  external_snark_worker_types.rs  summary.md
node/src/external_snark_worker_effectful/: external_snark_worker_effectful_actions.rs
node/src/ledger/: ledger_manager.rs  ledger_reducer.rs  ledger_service.rs  mod.rs  summary.md
node/src/ledger_effectful/: ledger_effectful_actions.rs
node/src/logger/: logger_effects.rs
node/src/recorder/: mod.rs  recorder.rs  replayer.rs
node/src/rpc/: heartbeat.rs  mod.rs  rpc_actions.rs  rpc_reducer.rs  rpc_state.rs  summary.md
node/src/rpc_effectful/: rpc_effectful_action.rs  rpc_effectful_effects.rs  rpc_service.rs
node/src/snark_pool/: snark_pool_actions.rs  snark_pool_reducer.rs  snark_pool_state.rs  summary.md
node/src/stats/: mod.rs  stats_actions.rs  stats_block_producer.rs  stats_sync.rs
node/src/transaction_pool/: summary.md  transaction_pool_actions.rs  transaction_pool_effects.rs  (+3 more)
node/testing/: Cargo.toml  peer-discovery-test.md
node/web/: Cargo.toml  README.md
p2p/: Cargo.toml  README.md  libp2p.md  readme.md  testing.md
p2p/libp2p-rpc-behaviour/: Cargo.toml
p2p/src/: fuzzer.rs  lib.rs  p2p_actions.rs  p2p_effects.rs  p2p_event.rs  p2p_reducer.rs  p2p_service.rs  p2p_state.rs  summary.md
p2p/testing/: Cargo.toml  README.md
p2p/tests/: connection.rs  identify.rs  kademlia.rs
poseidon/: Cargo.toml
poseidon/src/: hash.rs  lib.rs
poseidon/tests/: test_hash_params.rs  test_item_as_bigint.rs
producer-dashboard/: Cargo.toml
snark/: Cargo.toml
snark/src/: lib.rs  snark_actions.rs  snark_event.rs  snark_reducer.rs  snark_state.rs  summary.md
tools/archive-breadcrumb-compare/: Cargo.toml
tools/bootstrap-sandbox/: Cargo.toml  Dockerfile  run.yaml
tools/fuzzing/: Cargo.toml  Dockerfile
tools/gossipsub-sandbox/: Cargo.toml
tools/heartbeats-processor/: Cargo.toml  Dockerfile  README.md
tools/ledger-tool/: Cargo.toml
tools/salsa-simple/: Cargo.toml
tools/testing/: Cargo.toml
tools/transport/: Cargo.toml
tools/webrtc-sniffer/: Cargo.toml  README.md
vrf/: Cargo.toml
vrf/src/: lib.rs  message.rs  output.rs  threshold.rs
(+1469 files in other folders)
