[workspace]
members = [
  "core",
  "macros",
  "ledger",
  "snark",
  "p2p",
  "p2p/testing",
  "p2p/libp2p-rpc-behaviour",
  "node",
  "node/account",
  "node/common",
  "node/native",
  "node/web",
  "node/invariants",
  "node/testing",
  "cli",
  "cli/replay_dynamic_effects",
  "vrf",

  "mina-p2p-messages",
  "ledger",
  "poseidon",

  "tools/transport",
  "tools/bootstrap-sandbox",
  "tools/gossipsub-sandbox",
  "tools/hash-tool",
  "tools/ledger-tool",
  "tools/salsa-simple",
  "tools/fuzzing",
  "tools/archive-breadcrumb-compare",
  "tools/heartbeats-processor",
  "tools/webrtc-sniffer",

  "producer-dashboard",

  "fuzzer",
]

resolver = "2"

[workspace.lints.clippy]
#unwrap_used = "warn"
arithmetic_side_effects = "warn"
indexing_slicing = "warn"

[workspace.dependencies]
ledger = { path = "ledger", package = "mina-tree" }
mina-p2p-messages = { path = "mina-p2p-messages" }
poseidon = { path = "poseidon" }

# UNCOMMENTED_IN_CI mina-curves = { git = "https://github.com/openmina/proof-systems", rev = "d1912bca54d2609296b9af9d09ad1ef78702e203", features = [ "32x9" ] }
kimchi = { git = "https://github.com/openmina/proof-systems", rev = "d1912bca54d2609296b9af9d09ad1ef78702e203" }
mina-curves = { git = "https://github.com/openmina/proof-systems", rev = "d1912bca54d2609296b9af9d09ad1ef78702e203" }
mina-hasher = { git = "https://github.com/openmina/proof-systems", rev = "d1912bca54d2609296b9af9d09ad1ef78702e203" }
mina-poseidon = { git = "https://github.com/openmina/proof-systems", rev = "d1912bca54d2609296b9af9d09ad1ef78702e203" }
mina-signer = { git = "https://github.com/openmina/proof-systems", rev = "d1912bca54d2609296b9af9d09ad1ef78702e203" }
o1-utils = { git = "https://github.com/openmina/proof-systems", rev = "d1912bca54d2609296b9af9d09ad1ef78702e203" }
poly-commitment = { git = "https://github.com/openmina/proof-systems", rev = "d1912bca54d2609296b9af9d09ad1ef78702e203" }

# kimchi.path = "../deps/proof-systems/kimchi"
# mina-curves.path = "../deps/proof-systems/curves"
# mina-hasher.path = "../deps/proof-systems/hasher"
# mina-poseidon.path = "../deps/proof-systems/poseidon"
# mina-signer.path = "../deps/proof-systems/signer"
# o1-utils.path = "../deps/proof-systems/utils"
# poly-commitment.path = "../deps/proof-systems/poly-commitment"

juniper = { version = "0.16" }
libp2p = { git = "https://github.com/openmina/rust-libp2p", rev = "5c44c7d9", default-features = false }
linkme = "0.3.22"
mina-node-account = { path = "node/account" }
redux = { git = "https://github.com/o1-labs/redux-rs.git", rev = "06c8366", features = [
  "serde",
] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.107"
serde_with = { version = "3.7.0", features = ["hex"] }
static_assertions = "1.1.0"
vrf = { path = "vrf" }


ark-ec = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode", features = [
  "std",
] }
ark-ff = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode", features = [
  "parallel",
  "asm",
  "std",
] }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode", features = [
  "std",
] }

num-bigint = { git = "https://github.com/openmina/num-bigint", branch = "rebase-onstack" } # branch: rebase-onstack

# UNCOMMENTED_IN_CI ark-ff = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode", features = ["parallel", "asm", "std", "32x9" ] }

graphannis-malloc_size_of = { git = "https://github.com/openmina/graphannis-malloc_size_of.git", rev = "f7da9f6" }
graphannis-malloc_size_of_derive = { git = "https://github.com/openmina/graphannis-malloc_size_of_derive.git" }

mina-producer-dashboard = { path = "producer-dashboard" }

[profile.fuzz]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = true # TODO: test and disable if too slow
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode" }

num-bigint = { git = "https://github.com/openmina/num-bigint", branch = "rebase-onstack" }     # branch: rebase-onstack
num-rational = { git = "https://github.com/openmina/num-rational", branch = "rebase-onstack" } # branch: rebase-onstack

[profile.test.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = false
