[workspace]
members = [
  "core",
  "macros",
  "ledger",
  "snark",
  "p2p",
  "p2p/testing",
  "p2p/libp2p-rpc-behaviour",
  "node",
  "node/account",
  "node/common",
  "node/native",
  "node/web",
  "node/invariants",
  "node/testing",
  "cli",
  "cli/replay_dynamic_effects",
  "vrf",

  "mina-p2p-messages",
  "ledger",
  "poseidon",

  "tools/transport",
  "tools/bootstrap-sandbox",
  "tools/gossipsub-sandbox",
  "tools/hash-tool",
  "tools/ledger-tool",
  "tools/salsa-simple",
  "tools/fuzzing",
  "tools/archive-breadcrumb-compare",
  "tools/heartbeats-processor",
  "tools/webrtc-sniffer",

  "producer-dashboard",

  "fuzzer",
  "vendor/num-bigint-generic",
  "vendor/num-rational-generic",
]

resolver = "2"

[workspace.lints.clippy]
#unwrap_used = "warn"
arithmetic_side_effects = "warn"
indexing_slicing = "warn"

[workspace.dependencies]
# UNCOMMENTED_IN_CI mina-curves = { git = "https://github.com/openmina/proof-systems", rev = "d1912bca54d2609296b9af9d09ad1ef78702e203", features = [ "32x9" ] }
# UNCOMMENTED_IN_CI ark-ff = { git = "https://github.com/openmina/algebra", branch = "rebase-fix-openmina-webnode", features = ["parallel", "asm", "std", "32x9" ] }

ark-ec = { version = "0.5", features = ["std"] }
ark-ff = { version = "0.5", features = ["parallel", "asm", "std"] }
ark-poly = { version = "0.5" }
ark-serialize = { version = "0.5", features = ["std"] }
graphannis-malloc_size_of = { git = "https://github.com/openmina/graphannis-malloc_size_of.git", rev = "f7da9f6" }
graphannis-malloc_size_of_derive = { git = "https://github.com/openmina/graphannis-malloc_size_of_derive.git" }
juniper = { version = "0.16" }
kimchi = { git = "https://github.com/o1-labs/proof-systems", rev = "c513810dddec410c4065df359a66b1adfdf1aa23" }
ledger = { path = "ledger", package = "mina-tree" }
libp2p = { git = "https://github.com/openmina/rust-libp2p", rev = "5c44c7d9", default-features = false }
linkme = "0.3.22"
mina-curves = { git = "https://github.com/o1-labs/proof-systems", rev = "c513810dddec410c4065df359a66b1adfdf1aa23" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", rev = "c513810dddec410c4065df359a66b1adfdf1aa23" }
mina-node-account = { path = "node/account" }
mina-p2p-messages = { path = "mina-p2p-messages" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", rev = "c513810dddec410c4065df359a66b1adfdf1aa23" }
mina-producer-dashboard = { path = "producer-dashboard" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", rev = "c513810dddec410c4065df359a66b1adfdf1aa23" }
num-bigint = { version = "0.4.6" }
num-bigint-generic = { path = "./vendor/num-bigint-generic" }
num-rational-generic = { path = "./vendor/num-rational-generic" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems", rev = "c513810dddec410c4065df359a66b1adfdf1aa23" }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems", rev = "c513810dddec410c4065df359a66b1adfdf1aa23" }
poseidon = { path = "poseidon" }
redux = { git = "https://github.com/o1-labs/redux-rs.git", rev = "06c8366", features = [
  "serde",
] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.107"
serde_with = { version = "3.7.0", features = ["hex"] }
static_assertions = "1.1.0"
vrf = { path = "vrf" }

[profile.fuzz]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = true # TODO: test and disable if too slow
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1

[profile.test.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = false
