[package]
name = "cli"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "openmina"
path = "src/main.rs"

[dependencies]
hex = "0.4"
ledger = { workspace = true }
libp2p-identity = { version = "=0.2.7", features = ["peerid"] }
mina-p2p-messages = { workspace = true }
num_cpus = "1.0"
rand = "0.8.0"
rayon = "1.5"
redux = { workspace = true }
serde = "1.0.158"
sha2 = "0.10"
tokio = { version = "1.26.0" }
vrf = { workspace = true }

anyhow = "1.0.81"
clap = { version = "4.3", features = ["derive", "env"] }
console = "0.15.5"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }

backtrace = "0.3"
bytes = "1.4.0"
dialoguer = "0.10.4"
nix = { version = "0.26.2", features = ["signal"] }
node = { path = "../node", features = ["replay"] }
openmina-core = { path = "../core" }
openmina-node-account = { path = "../node/account" }
openmina-node-native = { path = "../node/native" }
serde_json = "1.0.107"
shellexpand = "3.1.0"
tracing = "0.1.37"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3.8.0"

[features]
default = ["p2p-libp2p", "p2p-webrtc"]
unsafe-signal-handlers = []
p2p-libp2p = ["openmina-node-native/p2p-libp2p"]
p2p-webrtc = ["openmina-node-native/p2p-webrtc"]
fuzzing = ["node/fuzzing", "openmina-core/fuzzing"]
