[package]
name = "cli"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "mina"
path = "src/main.rs"

[dependencies]
hex = { workspace = true }
ledger = { workspace = true }
libp2p-identity = { workspace = true, features = ["peerid"] }
mina-p2p-messages = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redux = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
vrf = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
console = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
time = { workspace = true }

backtrace = { workspace = true }
bytes = { workspace = true }
dialoguer = { workspace = true }
mina-core = { path = "../core" }
mina-node-account = { workspace = true }
mina-node-native = { path = "../node/native" }
mina-signer = { workspace = true }
nix = { workspace = true, features = ["signal"] }
node = { path = "../node", features = ["replay"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }
tikv-jemallocator = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["p2p-libp2p", "p2p-webrtc"]
unsafe-signal-handlers = []
p2p-libp2p = ["mina-node-native/p2p-libp2p"]
p2p-webrtc = ["mina-node-native/p2p-webrtc"]
fuzzing = ["node/fuzzing", "mina-core/fuzzing"]
