[package]
name = "cli"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "mina"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
backtrace = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
console = { workspace = true }
dialoguer = { workspace = true }
hex = { workspace = true }
ledger = { workspace = true }
libp2p-identity = { workspace = true, features = ["peerid"] }
mina-core = { path = "../core" }
mina-node-account = { workspace = true }
mina-node-native = { path = "../node/native" }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
nix = { workspace = true, features = ["signal"] }
node = { path = "../node", features = ["replay"] }
num_cpus = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redux = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shellexpand = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vrf = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }
tikv-jemallocator = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["p2p-libp2p", "p2p-webrtc"]
unsafe-signal-handlers = []
p2p-libp2p = ["mina-node-native/p2p-libp2p"]
p2p-webrtc = ["mina-node-native/p2p-webrtc"]
fuzzing = ["node/fuzzing", "mina-core/fuzzing"]
