[package]
name = "mina-core"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
bs58 = "0.4.0"
crypto_secretbox = { version = "0.1.1", features = ["std"] }
flume = { version = "0.11.1", features = ["async", "spin"] }
lazy_static = "1.4.0"
md5 = "0.7.0"
mina-fuzzer = { path = "../fuzzer", optional = true }
mina-macros = { path = "../macros" }
multihash = { version = "0.18.1", features = ["blake2b"] }
once_cell = "1"
rand = "0.8.0"
redux = { workspace = true }
serde = { version = "1.0.147", features = ["rc"] }
serde_json = "1.0"
sha2 = "0.10.6"
slab = { version = "0.4.7", features = ["serde"] }
thiserror = "1.0.37"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.26", features = ["sync"] }
tracing = { version = "0.1", features = ["std"] }

graphannis-malloc_size_of = { workspace = true }
graphannis-malloc_size_of_derive = { workspace = true }

ark-ff = { workspace = true }
hex = "0.4.3"
libp2p-identity = { version = "=0.2.7", features = ["serde", "peerid"] }
mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-p2p-messages = { workspace = true }
poseidon = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
wasm_thread = { version = "0.3", features = ["es_modules"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Response"] }

[dev-dependencies]
serde_json = { version = "1" }

[features]
fuzzing = ["mina-fuzzer"]
