[package]
name = "mina-core"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
argon2 = { workspace = true }
ark-ff = { workspace = true }
base64 = { workspace = true }
binprot = { workspace = true }
binprot_derive = { workspace = true }
bs58 = { workspace = true }
crypto_secretbox = { workspace = true }
flume = { workspace = true }
graphannis-malloc_size_of = { workspace = true }
graphannis-malloc_size_of_derive = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
libp2p-identity = { workspace = true, features = ["serde", "peerid"] }
md5 = { workspace = true }
mina-curves = { workspace = true }
mina-fuzzer = { workspace = true, optional = true }
mina-hasher = { workspace = true }
mina-macros = { workspace = true }
mina-p2p-messages = { workspace = true }
multihash = { workspace = true }
once_cell = { workspace = true }
poseidon = { workspace = true }
rand = { workspace = true }
redux = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
slab = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm_thread = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Response"] }

[dev-dependencies]
serde_json = { workspace = true }

[features]
fuzzing = ["mina-fuzzer"]
