[package]
name = "mina-tree"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ledger"
path = "src/bin/ledger.rs"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

# For wasm on browser, add those flags:
# https://stackoverflow.com/a/73023306

[dependencies]
juniper = { workspace = true }
kimchi = { workspace = true }
mina-core = { path = "../core" }
mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-macros = { path = "../macros" }
mina-poseidon = { workspace = true }
mina-signer = { workspace = true }
o1-utils = { workspace = true }
poly-commitment = { workspace = true }
poseidon = { workspace = true }
redux = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

bs58 = { workspace = true }
mina-p2p-messages = { workspace = true }

base64 = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }

# oracle = { path = "../oracle" }
# mina-curves = { path = "../curves" }
# o1-utils = { path = "../utils" }

itertools = { workspace = true }

ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }

rayon = { workspace = true }

bitvec = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }

once_cell = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
uuid = { workspace = true }

postcard = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true, features = ["float_roundtrip"] }

anyhow = { workspace = true }
backtrace = { workspace = true }
blake2 = { workspace = true }
crc32fast = { workspace = true }
derive_more = { workspace = true }
fraction = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
zstd = { workspace = true, optional = true }
# ocaml-interop = { path = "/home/sebastien/github/ocaml-interop", optional = true }
ocaml-interop = { workspace = true, optional = true }
# ocaml-interop = { git = "https://github.com/tizoc/ocaml-interop.git", branch = "closure-values", optional = true }
reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
rand_pcg = { workspace = true }
rand_seeder = { workspace = true }
tuple-map = { workspace = true }
rsa = { workspace = true }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true, features = [
  "Blob",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "Url",
  "Worker",
  "WorkerType",
  "WorkerOptions",
  "console",
  "Window",
  "Performance",
] }

[features]
# Put zstd behind a feature, cargo always re-compile it without touching the files
compression = ["zstd"]
# Add this feature to run tests in both nodejs and browser:
# https://github.com/rustwasm/wasm-bindgen/issues/2571
in_nodejs = []
fuzzing = []

[profile.release]
debug = true


# Run tests in CI with this profile
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.ci]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
