[package]
name = "mina-tree"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "database"
harness = false

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

# For wasm on browser, add those flags:
# https://stackoverflow.com/a/73023306

[dependencies]
anyhow = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
backtrace = { workspace = true }
base64 = { workspace = true }
bitvec = { workspace = true }
blake2 = { workspace = true }
bs58 = { workspace = true }
crc32fast = { workspace = true }
derive_more = { workspace = true }
fraction = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
juniper = { workspace = true }
kimchi = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
mina-core = { workspace = true }
mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-macros = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-poseidon = { workspace = true }
mina-signer = { workspace = true }
num-bigint = { workspace = true }
o1-utils = { workspace = true }
once_cell = { workspace = true }
poly-commitment = { workspace = true }
poseidon = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rayon = { workspace = true }
redux = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true, features = ["float_roundtrip"] }
serde_with = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
zstd = { workspace = true, optional = true }
ocaml-interop = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
criterion = { workspace = true }
rand_pcg = { workspace = true }
rand_seeder = { workspace = true }
tuple-map = { workspace = true }
rsa = { workspace = true }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true, features = [
  "Blob",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "Url",
  "Worker",
  "WorkerType",
  "WorkerOptions",
  "console",
  "Window",
  "Performance",
] }

[features]
# Put zstd behind a feature, cargo always re-compile it without touching the files
compression = ["zstd"]
# Add this feature to run tests in both nodejs and browser:
# https://github.com/rustwasm/wasm-bindgen/issues/2571
in_nodejs = []
fuzzing = []

[profile.release]
debug = true


# Run tests in CI with this profile
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.ci]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
