[package]
name = "mina-macros"
version = "0.18.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Alexander Koptelov <alexandre.koptelov@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
mina-core = { workspace = true }
redux = { workspace = true }
tracing = { workspace = true }
rust-format = { workspace = true, features = ["token_stream"] }
anyhow = { workspace = true }
