[package]
name = "mina-p2p-messages"
version = "0.6.4"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
blake2 = { version = "0.10" }
bs58 = { version = "0.4", features = ["check"] }
derive_more = "0.99.17"
hex = "0.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4.6"
serde = { version = "1.0.142", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0.83" }
sha2 = { version = "0.10.2" }
strum = "0.26.2"
strum_macros = "0.26.4"
thiserror = "1.0.32"
time = "0.3.36"

mina-macros = { path = "../macros" }

mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-signer = { workspace = true }
o1-utils = { workspace = true }
poseidon = { workspace = true }

ark-ff = { workspace = true }
rsexp = "0.2.3"
rsexp-derive = "0.2.3"

graphannis-malloc_size_of = { workspace = true }
graphannis-malloc_size_of_derive = { workspace = true }

[target.'cfg(fuzzing)'.dev-dependencies]
fuzzcheck = "0.12.1"

[dev-dependencies]
wasm-bindgen = "0.2"
anyhow = "1.0.65"
toml = "0.5.9"
clap = { version = "4.0.18", features = ["derive"] }
alloc-test = { git = "https://github.com/openmina/alloc-test.git" }
time = { version = "0.3.17", features = ["formatting"] }

[target.wasm32-unknown-unknown.dev-dependencies]
web-sys = { version = "0.3.60", features = ["console"] }
wasm-bindgen-test = "0.3.33"
wasm-bindgen = "0.2"
