[package]
name = "node"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.70"
ark-ff = { workspace = true }
base64 = "0.22"
blake2 = "0.10"
derive_more = "0.99.17"
hex = "0.4"
lazy_static = "1.4.0"
ledger = { workspace = true }
mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
multihash = { version = "0.18.1", features = ["blake2b"] }
num_enum = "0.5.7"
poseidon = { workspace = true }
rand = "0.8.0"
redux = { workspace = true }
serde = "1.0.147"
serde_json = { version = "1.0.82", features = [
  "unbounded_depth",
  "arbitrary_precision",
] }
serde_with = { version = "3.6.1", features = ["time_0_3"] }
strum = "0.26.2"
strum_macros = "0.26.4"
thiserror = "1.0.37"
time = { version = "0.3.36", features = ["parsing"] }
vrf = { workspace = true }

graphannis-malloc_size_of = { workspace = true }
graphannis-malloc_size_of_derive = { workspace = true }

openmina-core = { path = "../core" }
openmina-node-account = { workspace = true }
p2p = { path = "../p2p" }
postcard = { version = "1.0.9", features = ["use-std"] }
snark = { path = "../snark" }
static_assertions.workspace = true
tokio = { version = "1.26.0" }

[build-dependencies]
regex = "1"
rust-format = "0.3"
vergen = { version = "8.2.4", features = [
  "build",
  "cargo",
  "git",
  "gitcl",
  "rustc",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
linkme = { workspace = true }
redux = { workspace = true, features = ["serializable_callbacks"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"

[features]
serializable_callbacks = []
replay = []
p2p-webrtc = ["p2p/p2p-webrtc"]
p2p-libp2p = ["p2p/p2p-libp2p"]
fuzzing = ["p2p/fuzzing"]
